--- a/OnlineShop/Web.config
+++ b/OnlineShop/Web.config
@@ -41,7 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=SGLT22042;initial catalog=OnlineShop;persist security info=True;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="OnlineShopDbContext" connectionString="data source=DUY\SQLEXPRESS;initial catalog=OnlineShop;persist security info=True;user id=duy;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
