--- a/Model/App.config
+++ b/Model/App.config
@@ -10,6 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=SGLT22042;initial catalog=OnlineShop;persist security info=True;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="OnlineShopDbContext" connectionString="data source=SGLT22042;initial catalog=OnlineShop;persist security info=True;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+  <add name="OnlineShopDbContext" connectionString="data source=.;initial catalog=OnlineShop;persist security info=True;user id=sa;password=123456;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
