--- a/OnlineShop/Web.config
+++ b/OnlineShop/Web.config
@@ -26,11 +26,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -41,7 +41,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=DUY\SQLEXPRESS;initial catalog=OnlineShop;persist security info=True;user id=duy;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="OnlineShopDbContext" connectionString="data source=DUY\SQLEXPRESS;initial catalog=OnlineShop;persist security info=True;user id=duy;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="OnlineShopDbContext" connectionString="data source=.;initial catalog=OnlineShop;persist security info=True;user id=sa;password=123456;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
